--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="btn-box">
         <a href="mailto:puneethsai542@gmail.com?subject=Hire%20Me&body=Hello%20Puneeth,%20I%20am%20interested%20in%20hiring%20you%20for%20a%20project." 
            class="btn-1" 
-           style="color: white; text-decoration: none; display: inline-block; padding: 10px 20px; background-color: #007BFF; border-radius: 5px; text-align: center;">
+           style="color: white; text-decoration: none; display: inline-block; padding: 10px 20px; background-color: black; border-radius: 5px; text-align: center;">
           Hire Me
         </a>
       </div>
